# open-poen-api

./: .env.example  .gitattributes  .gitignore  Dockerfile  Dockerfile.dev  Dockerfile.prod  README.md  docker-compose.yml  entrypoint.sh  loop_script.sh  mail.env.example  production.env.example  pyproject.toml  sandbox.env.example
.devcontainer/: devcontainer.json
.git-crypt/keys/default/0/: AC5446921245B4C2AE7075C4C197E6AF30095C4F.gpg  E140F049377C1C8080CD19A29C371929105AC34A.gpg  E6B6F846CF7D1664128649621FA02FB901B11103.gpg
alembic/: env.py
alembic/versions/: 4fef33fa6875_first_revision.py
app/: routes.py
docs/: diagrams.md
open_poen_api/: app.py  authorization.py  cli.py  data_adapter.py  database.py  exc.py  initiative_manager.py  logger.py  main.polar  models.py  payment.py  query.py  routes.py  user_manager.py  utils.py
open_poen_api/authorization/: authorization.py  data_adapter.py
open_poen_api/bng/: __init__.py  api.py  payments.py  utils.py
open_poen_api/gocardless/: __init__.py  api.py  payment_schema.py  payments.py  utils.py
open_poen_api/managers/: __init__.py  activity_manager.py  bank_account_manager.py  base_manager.py  base_manager_ex_current_user.py  bases.py  exc.py  foo.py  funder_manager.py  grant_manager.py  handlers.py  initiative_manager.py  manager_handlers.py  payment_manager.py  regulation_manager.py  requisition_manager.py  user_manager.py
open_poen_api/managers/user_manager/: __init__.py  user_manager.py  user_manager_ex_current_user.py
open_poen_api/schemas/: __init__.py  activity.py  attachment.py  auth.py  bank_account.py  bng.py  file_upload.py  funder.py  gocardless.py  grant.py  initiative.py  linked_entities.py  mixins.py  payment.py  profile_picture.py  regulation.py  user.py
open_poen_api/schemas_and_models/: __init__.py  activity.py  bng.py  debit_card.py  initiative.py  linked_entities.py  mixins.py  payment.py  user.py
open_poen_api/schemas_and_models/models/: associations.py  entities.py
open_poen_api/templates/: on_after_forgot_password.txt  on_after_register.txt
open_poen_api/user_routes/: user.py
open_poen_api/utils/: email.py  load_env.py  mail.py  utils.py
tests/: conftest.py  fixtures.py  test_activity.py  test_bank_account.py  test_delete.py  test_file_uploads.py  test_financial_summary.py  test_flow.py  test_funder.py  test_grant.py  test_initiative.py  test_payment.py  test_regulation.py  test_user.py  test_user_old.py
tests/bng/: bng_data.example.json  bng_import  test_create_bng.py  test_import.py
tests/dummy_data/: activities.json  bank_accounts.json  debit_cards.json  funders.json  grants.json  initiatives.json  payments.json  regulations.json  requisitions.json  users.json
tests/gocardless/: test_gocardless.py  test_gocardless_import.py
tests/permissions/: test_permissions.py
tests/user_flow/: test_create_user.py
